tests/golden/oidc/kubevirt-manager/kubevirt-manager/20_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: kubevirt-manager
    kubevirt-manager.io/version: 1.5.4
  name: kubevirt-manager
  namespace: syn-kubevirt-manager
spec:
  ports:
    - name: http
      port: 4180
      targetPort: 4180
  selector:
    app.kubernetes.io/name: kubevirt-manager
    kubevirt-manager.io/version: 1.5.4
  type: ClusterIP
